    - added new method Region::SplitDimensionZone(dimension_t, int)
    - Fixed crash caused by Region::GetDimensionRegionByValue() that happened
      with certain velocity split sounds under certain conditions (added bound
      constraints to prevent that)
    - GIG FORMAT EXTENSION: added support for real-time instrument scripts.

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added inline helper methods overlaps() for struct range_t

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems
    - fixed memory leak and memory handling errors when file loading
      fails
    - added new method Chunk::ReadString
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added new method File::IsNew()
    - added support for loading RIFF-like files with a bit different layout
      than "real" RIFF files (used for KORG format support)
    - added new method Chunk::GetFile()
    - added new method Chunk::GetLayout()
    - added 2nd, alternative method for List::MoveSubChunk(), the old 1st one
      allows to move a subchunk within the current List, whereas the new 2nd
      one allows to move the subchunk from the current list to another list

  * src/gigextract.cpp:
    - export sample loop, unity note and fine tune with libsndfile

  * src/riftree.cpp:
    - added more command line options for being able to also dump other kind
      of file formats similar but not equal to the RIFF format

Version 3.3.0 (30 Jul 2009)

  * general changes:
    - fixed compilation with gcc 4.3
    - fixes for building with Visual C++